# 3DEdenInf

./: .gitignore  .travis.yml  README.md
FSInference/: FSInference.cbp  FSInference.depend  FSInference.layout  main.cpp  model_inference_info_0.info  model_inference_info_1.info  model_inference_info_3.info
FSInference/dist_0/fit_adv/: go.info
commands/: code.txt  model_etalon_info.info
copy_06_04_2017/linux_cancer_3d/: classes.h  linux_cancer_3d.depend  main.cpp  sample_processing.cpp  simulation.cpp
copy_from_euler/: bash_script_ABC_inferences.bat  cholesky.hpp  compiling.bat  debug_functions.h  main.cpp  prog_parameters.cpp  prog_parameters.h  run_all.bat
copy_from_euler/file_system_creation/dev/: main.cpp  run.bat
copy_from_euler/sim_prog/: bash_script_probes_creation.bat  compiling.bat  conf_structures.cpp  conf_structures.h  lsf.o50666961  lsf.o50666968  lsf.o50666976  lsf.o50666983  lsf.o50666990  lsf.o50666996  main.cpp  sample_processing.cpp  sample_processing.h
copy_from_euler/sim_prog/arhiv/: cons.cpp  functions.cpp  linux_cancer_3d.cbp  linux_cancer_3d.layout  local_duplicate_cancer_3d.bat  main.cpp  model_settings_1.info  model_settings_3.info  run_info.txt  sample_processing.cpp  simulation.cpp
emp_xi_dist/: emp_xi_dist.cbp  emp_xi_dist.cscope_file_list  emp_xi_dist.depend  emp_xi_dist.layout  main.cpp
linux_cancer_3d/: AfterCreatMutVector();  BeforeUniqueGenotypes();  classes.h  command.txt  functions.cpp  linux_cancer_3d.cbp  linux_cancer_3d.depend  linux_cancer_3d.layout  main.cpp  model_info_1.info  params.h  sample_processing.cpp  sample_processing.h  simulation.cpp
linux_cancer_3d/test/: model_inference_info.info
multi/: inverse_matrix.h  main.cpp  model_inference_info.info  multi.cbp  multi.cscope_file_list  multi.depend  multi.layout  multivariate_gaussian_distribution.h
multi/dist_0/mut_rate/: model_inference_info.info
multi/dist_1/dr_mut_rate/: model_inference_info.info
multi/dist_1/fit_adv/: model_inference_info.info
multi/dist_1/mut_rate/: model_inference_info.info
multi/dist_2/dr_mut_rate/: model_inference_info.info
multi/dist_2/fit_adv/: model_inference_info.info
multi/dist_2/mut_rate/: model_inference_info.info
multi/dist_3/dr_mut_rate/: model_inference_info.info
multi/dist_3/fit_adv/: model_inference_info.info
multi/dist_3/mut_rate/: model_inference_info.info
multi/etalon_samples_20_cells_from_1e6_random_sampling/: model_info_11.info  model_info_12.info  model_info_2.info
multi/simulation_results/etalon_samples_20_cells_from_1e6_random_sampling/: model_info_3.info  model_info_7.info
multi/src/: debug_functions.cpp
multi/test/: model_inference_info.info
multi/test_28_06_2016/old_results/: mutation_graph.txt
old_versions/: main.cpp
old_versions/copy_06_04_2017/linux_cancer_3d/: coomand.txt  linux_cancer_3d.cbp  linux_cancer_3d.layout  model_etalon_info_1.info  model_inference_info.info  model_info_2.info  params.h  sample_processing.h
old_versions/copy_18_06_2017/: main.cpp  model_etalon_info.info  model_inference_info.info  phylip.cpp  treedist.cpp  treedist.h
old_versions/copy_24_04_2017/: linux_cancer_3d.cbp  linux_cancer_3d.layout  main.cpp
old_versions/copy_24_04_2017/src/: functions.cpp  sample_processing.cpp  simulation.cpp
old_versions/copy_24_04_2017/test/: model_inference_info.info
par_inf/: CMakeLists.txt  run.bat  run_all.bat  run_survivor.bat
par_inf/Arhiv/: arhiv_08_02_2018.7z
par_inf/Arhiv/arhiv_12_02_2018/: classes.h  conf_structures.cpp  conf_structures.h  cons.h  main.cpp  params.h  phylip.h  sample_processing.cpp  sample_processing.h  simulation.cpp  simulation_structures.cpp  simulation_structures.h
par_inf/config/: CMakeLists.txt
par_inf/config/source/: CMakeLists.txt
par_inf/file_system_creation/dev/: bash_script_compare_dist.bat  bash_script_probes_creation.bat  compare_dist_for_diff_coefficients.bat  etalons_file_system_creation.cbp  etalons_file_system_creation.layout  file_sys_for_parallel_computations.cpp  file_sys_for_parallel_computations.h  main.cpp  run.bat  run_info.txt
par_inf/file_system_creation/source/: CMakeLists.txt  README.MD  cmake_debug.sh  compiling.bat  file_sys_for_parallel_computations.h  main.cpp  read_me.txt  run.bat
par_inf/multi/: main.cpp  multi.depend  multi.layout  prog_parameters.cpp  run_cancer.bat  run_info.txt
par_inf/multi/arhiv/: main.cpp
par_inf/sim_prog/: classes.h  conf_structures.h  linux_cancer_3d.cbp  linux_cancer_3d.depend  linux_cancer_3d.layout  main.cpp  params.h  phylip.h  run_info.txt  sample_processing.cpp  sample_processing.h  simulation.cpp
par_inf/sim_prog/Arhiv25_02_2018/: classes.h  conf_structures.h  del_all_files.bat  functions.cpp  linux_cancer_3d.cbp  linux_cancer_3d.cscope_file_list  linux_cancer_3d.depend  main.cpp  (+9 more)
project_info/: README.md
project_info/commands/: code.txt
sim_prog/: cons.h  file_to_delete.txt  functions.cpp  linux_cancer_3d.cbp  linux_cancer_3d.depend  linux_cancer_3d.layout  main.cpp  model_etalon_info.info  model_inference_info.info  run info.txt  sample_processing.cpp  sample_processing.h
sim_prog/catalog/: mutation_graph.txt
sim_prog/src/: functions.cpp  sample_processing.cpp  simulation.cpp
sim_prog/test/: model_inference_info.info
(+324 files in other folders)
